# lumalink-platform

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  library.json  library.properties  pio_test_output.txt  platformio.ini
cmake/: lumalinkPlatformConfig.cmake.in
docs/: imported-file-list.txt  modules.md  platform-extraction-todo.md  pre-modules-native-layout-plan.md  upgrading-pre-modules-native-layout.md
docs/backlog/task-lists/: 001-cmake-build-system-migration.md  001-cxx-modules-export.md  001-pre-modules-native-layout.md  002-embedded-platform-targets.md  003-cpp23-modernization.md
docs/imported-backup/: Span_imported.h
src/: LumaLinkPlatform.h
src/httpadv/v1/platform/: PathMapper.h
src/httpadv/v1/platform/arduino/: ArduinoFileAdapter.h  ArduinoWiFiTransport.h
src/httpadv/v1/platform/windows/: WindowsFileAdapter.h  WindowsSocketTransport.h
src/httpadv/v1/transport/: ITransportFactory.h  TransportInterfaces.h  TransportTraits.h
src/imported/httpadv/v1/core/: Defines.h
src/imported/httpadv/v1/platform/: TransportFactory.h
src/imported/httpadv/v1/platform/arduino/: ArduinoFileAdapter.h
src/imported/httpadv/v1/platform/memory/: MemoryFileAdapter.h
src/imported/httpadv/v1/platform/posix/: PosixFileAdapter.h
src/imported/httpadv/v1/transport/: Availability.h  ByteStream.h  IFileSystem.h
src/imported/httpadv/v1/util/: Span.h
src/lumalink/: LumaLinkPlatform.h  Span.h  platform_target.cpp  span.h  span.hpp
src/lumalink/buffers/: Availability.h  ByteStream.h
src/lumalink/filesystem/: FileSystem.h  MemoryFileAdapter.h
src/lumalink/path/: PathMapper.h
src/lumalink/platform/: ByteStream.h  Clock.h  ClockFactory.h  ClockTypes.h  FileSystem.h  MemoryFileAdapter.h  PathMapper.h  Platform.h  TransportFactory.h  TransportInterfaces.h  lumalink.platform.cppm  namespace.h
src/lumalink/platform/arduino/: ArduinoFileAdapter.h  ArduinoTime.h  ArduinoWiFiTransport.h
src/lumalink/platform/buffers/: Availability.h  Buffers.h  ByteStream.h
src/lumalink/platform/core/: Defines.h
src/lumalink/platform/filesystem/: FileSystem.h  PathUtility.h  ScopedFileSystem.h
src/lumalink/platform/memory/: MemoryFileAdapter.h
src/lumalink/platform/posix/: PosixFileAdapter.h  PosixSocketTransport.h  PosixTime.h
src/lumalink/platform/posix/posix/: PosixFileAdapter.h  PosixSocketTransport.h
src/lumalink/platform/time/: Clock.h  ClockTypes.h  ManualClock.h  TimeSource.h
src/lumalink/platform/transport/: Transport.h  TransportInterfaces.h  TransportTraits.h
src/lumalink/platform/util/: span.hpp
src/lumalink/platform/windows/: WindowsFileAdapter.h  WindowsSocketTransport.h  WindowsTime.h
src/lumalink/platform/windows/windows/: WindowsFileAdapter.h  WindowsSocketTransport.h
src/lumalink/time/: Clock.h  ClockTypes.h  ManualClock.h  TimeSource.h
src/lumalink/transport/: TransportInterfaces.h  TransportTraits.h
src/posix/: PosixFactory.h  PosixFileAdapter.h  PosixSocketTransport.h  PosixTime.h  lumalink.platform.posix.cppm
src/windows/: WindowsFactory.h  WindowsFileAdapter.h  WindowsSocketTransport.h  WindowsTime.h  lumalink.platform.windows.cppm
test/: README.md
test/imported_http_platform/: test_filesystem_posix.cpp  test_memory_filesystem.cpp  test_transport_native.cpp
test/support/include/: ByteStreamFixtures.h  ConsolidatedNativeSuite.h  HttpTestFixtures.h
test/support/native_arduino/: Arduino.h
test/test_native/: CMakeLists.txt  test_filesystem_native.cpp  test_main.cpp  test_memory_filesystem.cpp  test_path_utility.cpp  test_time.cpp  test_transport_native.cpp
tools/: link_winsock.py  run_native_tests.ps1
